--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
           path: "./node_modules"
 
       - name: "Install dependencies"
-        run: "yarn install --frozen-lockfile"
+        run: "yarn install --immutable"
 
       - name: "Lint Solidity and TypeScript code"
         run: "yarn run lint"
