--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "ethers": "^5.1.3",
     "fs-extra": "^9.0.1",
     "hardhat": "^2.2.0",
-    "husky": "^4.3.0",
+    "husky": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "mocha": "^8.1.3",
     "prettier": "^2.1.2",
     "prettier-plugin-solidity": "^1.0.0-beta.9",
@@ -65,6 +66,7 @@
   "peerDependencies": {
     "prb-math": "^1.1.0"
   },
+  "private": true,
   "scripts": {
     "clean": "hardhat clean",
     "commit": "git-cz",
@@ -73,8 +75,9 @@
     "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --config ./.eslintrc.yaml --ignore-path ./.eslintignore --ext .js,.ts .",
-    "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,md,sol,ts}\"",
-    "prettier:list-different": "prettier --config .prettierrc --list-different \"**/*.{js,json,md,sol,ts}\"",
+    "postinstall": "husky install",
+    "prettier": "prettier --config ./.prettierrc --write \"**/*.{js,json,md,sol,ts}\"",
+    "prettier:list-different": "prettier --config ./.prettierrc --list-different \"**/*.{js,json,md,sol,ts}\"",
     "test": "hardhat test",
     "typechain": "hardhat typechain"
   }
