--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,11 +1,11 @@
 extends:
-  - eslint:recommended
-  - plugin:@typescript-eslint/eslint-recommended
-  - plugin:@typescript-eslint/recommended
-  - prettier/@typescript-eslint
+  - "eslint:recommended"
+  - "plugin:@typescript-eslint/eslint-recommended"
+  - "plugin:@typescript-eslint/recommended"
+  - "prettier"
 parser: "@typescript-eslint/parser"
 parserOptions:
-  project: tsconfig.json
+  project: "tsconfig.json"
 plugins:
   - "@typescript-eslint"
 root: true
@@ -14,7 +14,7 @@ rules:
     - error
     - ignoreIIFE: true
       ignoreVoid: true
-  "@typescript-eslint/no-inferrable-types": 'off'
+  "@typescript-eslint/no-inferrable-types": "off"
   "@typescript-eslint/no-unused-vars":
     - error
     - argsIgnorePattern: _
