--- a/package.json
+++ b/package.json
@@ -5,53 +5,53 @@
     "prb-math": "^1.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^9.1.2",
-    "@commitlint/config-conventional": "^9.1.2",
-    "@ethersproject/abi": "^5.1.1",
-    "@ethersproject/abstract-signer": "^5.1.0",
-    "@ethersproject/bignumber": "^5.1.1",
-    "@ethersproject/bytes": "^5.1.0",
-    "@ethersproject/constants": "^5.1.0",
-    "@ethersproject/keccak256": "^5.1.0",
-    "@ethersproject/signing-key": "^5.1.0",
-    "@ethersproject/solidity": "^5.1.0",
-    "@ethersproject/strings": "^5.1.0",
-    "@ethersproject/wallet": "^5.1.0",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
+    "@ethersproject/abi": "^5.2.0",
+    "@ethersproject/abstract-signer": "^5.2.0",
+    "@ethersproject/bignumber": "^5.2.0",
+    "@ethersproject/bytes": "^5.2.0",
+    "@ethersproject/constants": "^5.2.0",
+    "@ethersproject/keccak256": "^5.2.0",
+    "@ethersproject/signing-key": "^5.2.0",
+    "@ethersproject/solidity": "^5.2.0",
+    "@ethersproject/strings": "^5.2.0",
+    "@ethersproject/wallet": "^5.2.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "^5.0.0",
-    "@typechain/hardhat": "^1.0.1",
-    "@types/chai": "^4.2.13",
-    "@types/fs-extra": "^9.0.1",
-    "@types/mocha": "^7.0.2",
-    "@types/node": "^14.11.8",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
-    "chai": "^4.2.0",
-    "commitizen": "^4.2.1",
+    "@typechain/ethers-v5": "^7.0.0",
+    "@typechain/hardhat": "^2.0.1",
+    "@types/chai": "^4.2.18",
+    "@types/fs-extra": "^9.0.11",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "chai": "^4.3.4",
+    "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.11.0",
-    "eslint-config-prettier": "^6.12.0",
+    "dotenv": "^10.0.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
     "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.1.3",
-    "fs-extra": "^9.0.1",
-    "hardhat": "^2.2.0",
+    "ethers": "^5.2.0",
+    "fs-extra": "^10.0.0",
+    "hardhat": "^2.3.0",
     "husky": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
     "lint-staged": "^11.0.0",
-    "mocha": "^8.1.3",
-    "prettier": "^2.1.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.9",
+    "mocha": "^8.4.0",
+    "prettier": "^2.3.0",
+    "prettier-plugin-solidity": "^1.0.0-beta.10",
     "shelljs": "^0.8.4",
-    "solhint": "^3.3.4",
+    "solhint": "^3.3.5",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.16",
     "ts-generator": "^0.1.1",
-    "ts-node": "^8.10.2",
-    "typechain": "^4.0.1",
-    "typescript": "<4.1.0"
+    "ts-node": "^10.0.0",
+    "typechain": "^5.0.0",
+    "typescript": "~4.2.4"
   },
   "importSort": {
     ".js, .jsx": {
@@ -67,17 +67,20 @@
     "prb-math": "^1.1.0"
   },
   "private": true,
+  "resolutions": {
+    "@ethersproject/wallet": "^5.2.0"
+  },
   "scripts": {
     "clean": "hardhat clean",
     "commit": "git-cz",
     "compile": "hardhat compile",
     "coverage": "hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/**/*.ts\"",
-    "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
+    "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:check",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --config ./.eslintrc.yaml --ignore-path ./.eslintignore --ext .js,.ts .",
     "postinstall": "husky install",
     "prettier": "prettier --config ./.prettierrc --write \"**/*.{js,json,md,sol,ts}\"",
-    "prettier:list-different": "prettier --config ./.prettierrc --list-different \"**/*.{js,json,md,sol,ts}\"",
+    "prettier:check": "prettier --check --config ./.prettierrc \"**/*.{js,json,md,sol,ts}\"",
     "test": "hardhat test",
     "typechain": "hardhat typechain"
   }
