--- a/package.json
+++ b/package.json
@@ -2,55 +2,55 @@
   "name": "paulrberg-contracts",
   "version": "3.2.1",
   "dependencies": {
-    "prb-math": "^2.0.0"
+    "prb-math": "^2.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "@ethersproject/abi": "^5.2.0",
-    "@ethersproject/abstract-signer": "^5.2.0",
-    "@ethersproject/bignumber": "^5.2.0",
-    "@ethersproject/bytes": "^5.2.0",
-    "@ethersproject/constants": "^5.2.0",
-    "@ethersproject/keccak256": "^5.2.0",
-    "@ethersproject/signing-key": "^5.2.0",
-    "@ethersproject/solidity": "^5.2.0",
-    "@ethersproject/strings": "^5.2.0",
-    "@ethersproject/wallet": "^5.2.0",
+    "@ethersproject/abi": "^5.3.1",
+    "@ethersproject/abstract-signer": "^5.3.0",
+    "@ethersproject/bignumber": "^5.3.0",
+    "@ethersproject/bytes": "^5.3.0",
+    "@ethersproject/constants": "^5.3.0",
+    "@ethersproject/keccak256": "^5.3.0",
+    "@ethersproject/signing-key": "^5.3.0",
+    "@ethersproject/solidity": "^5.3.0",
+    "@ethersproject/strings": "^5.3.0",
+    "@ethersproject/wallet": "^5.3.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@typechain/ethers-v5": "^7.0.0",
-    "@typechain/hardhat": "^2.0.1",
-    "@types/chai": "^4.2.18",
+    "@typechain/ethers-v5": "^7.0.1",
+    "@typechain/hardhat": "^2.1.0",
+    "@types/chai": "^4.2.19",
     "@types/fs-extra": "^9.0.11",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^15.6.1",
-    "@typescript-eslint/eslint-plugin": "^4.25.0",
-    "@typescript-eslint/parser": "^4.25.0",
+    "@types/node": "^15.12.4",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "chai": "^4.3.4",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^10.0.0",
-    "eslint": "^7.27.0",
+    "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
-    "ethereum-waffle": "^3.3.0",
-    "ethers": "^5.2.0",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.3.1",
     "fs-extra": "^10.0.0",
-    "hardhat": "^2.3.0",
+    "hardhat": "^2.4.1",
     "husky": "^6.0.0",
     "import-sort-parser-typescript": "^6.0.0",
     "import-sort-style-module": "^6.0.0",
     "lint-staged": "^11.0.0",
-    "mocha": "^8.4.0",
-    "prettier": "^2.3.0",
+    "mocha": "^9.0.1",
+    "prettier": "^2.3.1",
     "prettier-plugin-solidity": "^1.0.0-beta.10",
     "shelljs": "^0.8.4",
-    "solhint": "^3.3.5",
+    "solhint": "^3.3.6",
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.16",
     "ts-generator": "^0.1.1",
     "ts-node": "^10.0.0",
-    "typechain": "^5.0.0",
+    "typechain": "^5.1.1",
     "typescript": "~4.2.4"
   },
   "importSort": {
@@ -68,7 +68,10 @@
   },
   "private": true,
   "resolutions": {
-    "@ethersproject/wallet": "^5.2.0"
+    "@ethersproject/abi": "^5.3.1",
+    "@ethersproject/wallet": "^5.2.0",
+    "@solidity-parser/parser": "^0.13.2",
+    "ethers": "^5.3.1"
   },
   "scripts": {
     "clean": "hardhat clean",
