--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint-config-prettier": "^8.3.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.3.1",
+    "evm-fp": "^1.1.2",
+    "from-exponential": "^1.1.1",
     "fs-extra": "^10.0.0",
     "hardhat": "^2.4.1",
     "husky": "^6.0.0",
