--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,13 @@
   },
   "exclude": ["artifacts", "node_modules"],
   "files": ["./hardhat.config.ts"],
-  "include": ["artifacts/**/*", "artifacts/**/*.json", "helpers/**/*", "test/**/*", "typechain/**/*", "types/**/*"]
+  "include": [
+    "artifacts/**/*",
+    "artifacts/**/*.json",
+    "helpers/**/*",
+    "tasks/**/*",
+    "test/**/*",
+    "typechain/**/*",
+    "types/**/*"
+  ]
 }
