--- a/package.json
+++ b/package.json
@@ -88,6 +88,6 @@
     "prettier": "prettier --config ./.prettierrc --write \"**/*.{js,json,md,sol,ts}\"",
     "prettier:check": "prettier --check --config ./.prettierrc \"**/*.{js,json,md,sol,ts}\"",
     "test": "hardhat test",
-    "typechain": "hardhat typechain"
+    "typechain": "TS_NODE_TRANSPILE_ONLY=1 hardhat typechain"
   }
 }
