build: upgrade solidity compiler to v0.8.7
build: upgrade dev deps
build: upgrade yarn to v3.0.1
chore: delete stale yarn resolutions
chore: git ignore yarn files properly

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-# folders
+# directories
 .coverage_artifacts/
 .coverage_cache/
 .coverage_contracts/
 .yarn/*
-!.yarn/releases
+!.yarn/patches
 !.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 artifacts/
 bin/
 build/
