--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
+BOB_PRIVATE_KEY="private key"
 INFURA_API_KEY="zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
 MNEMONIC="here is where your twelve words mnemonic should be put my friend"
