--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,20 @@
 # directories
-.coverage_artifacts/
-.coverage_cache/
-.coverage_contracts/
 .yarn/*
 !.yarn/patches
-!.yarn/plugins
 !.yarn/releases
+!.yarn/plugins
 !.yarn/sdks
 !.yarn/versions
-artifacts/
-bin/
-build/
-cache/
-coverage/
-dist/
-lib/
-node_modules/
-typechain/
+**/artifacts
+**/build
+**/cache
+**/coverage
+**/.coverage_artifacts
+**/.coverage_cache
+**/.coverage_contracts
+**/dist
+**/node_modules
+**/typechain
 
 # files
 *.env
