--- a/.prettierignore
+++ b/.prettierignore
@@ -1,17 +1,22 @@
-# folders
-.coverage_artifacts/
-.coverage_cache/
-.coverage_contracts/
+# directories
 .yarn/
-artifacts/
-bin/
-build/
-cache/
-coverage/
-dist/
-lib/
-node_modules/
-typechain/
+**/.coverage_artifacts
+**/.coverage_cache
+**/.coverage_contracts
+**/artifacts
+**/build
+**/cache
+**/coverage
+**/dist
+**/node_modules
+**/typechain
 
 # files
+*.env
+*.log
+*.tsbuildinfo
+.pnp.*
 coverage.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
