--- a/contracts/package.json
+++ b/contracts/package.json
@@ -25,7 +25,7 @@
     "smart-contracts",
     "solidity"
   ],
-  "license": "WTFPL",
+  "license": "Unlicense",
   "peerDependencies": {
     "prb-math": "^2.2.0"
   },
