build: upgrade to "prb-math" v2.4.1
build: add resolution for "@ethersproject/wallet"
build: upgrade dev deps
chore: delete "onCompileComplete" and "onIstanbulComplete" hooks from ".solcover"
chore: move typechain bindings from "typechain" to "types"
chore: rename "typechain" task to "generate:types"
chore: set lib and target to "es6" in "tsconfig.ts"
chore: update paths in ignore config files
chore: use "import type" instead of "import" for importing TypeScript types
chore: use yaml extension for prettier config file
ci: minor rewordings in github workflows
docs: fix typo in natspec for "_transferAdmin" and "_transferOwnership" functions

--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,9 @@
 **/build
 **/cache
 **/coverage
-**/.coverage_artifacts
-**/.coverage_cache
-**/.coverage_contracts
 **/dist
 **/node_modules
-**/typechain
+**/src/types
 
 # files
 *.env
