--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -29,17 +29,17 @@ jobs:
           cache: "yarn"
           node-version: "16"
 
-      - name: "Install dependencies"
+      - name: "Install the dependencies"
         run: "yarn install --immutable"
 
-      - name: "Lint Solidity and TypeScript code"
-        run: "yarn run lint"
+      - name: "Lint the code"
+        run: "yarn lint"
 
-      - name: "Compile the contracts and generate TypeChain artifacts"
-        run: "yarn run typechain"
+      - name: "Compile the contracts and generate TypeChain bindings"
+        run: "yarn generate:types"
 
-      - name: "Test the contracts and run code coverage"
-        run: "yarn run coverage"
+      - name: "Test the contracts and run test coverage"
+        run: "yarn coverage"
 
       - name: "Upload report to Coveralls"
         uses: "coverallsapp/github-action@master"
