--- a/package.json
+++ b/package.json
@@ -2,48 +2,48 @@
   "name": "paulrberg-contracts",
   "version": "3.6.1",
   "dependencies": {
-    "prb-math": "^2.3.0"
+    "prb-math": "^2.4.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^13.1.0",
-    "@commitlint/config-conventional": "^13.1.0",
-    "@ethersproject/abi": "^5.4.1",
-    "@ethersproject/abstract-signer": "^5.4.1",
-    "@ethersproject/bignumber": "^5.4.2",
-    "@ethersproject/bytes": "^5.4.0",
-    "@ethersproject/constants": "^5.4.0",
-    "@ethersproject/keccak256": "^5.4.0",
-    "@ethersproject/providers": "^5.4.5",
-    "@ethersproject/signing-key": "^5.4.0",
-    "@ethersproject/solidity": "^5.4.0",
-    "@ethersproject/strings": "^5.4.0",
-    "@ethersproject/wallet": "^5.4.0",
+    "@commitlint/cli": "^13.2.1",
+    "@commitlint/config-conventional": "^13.2.0",
+    "@ethersproject/abi": "^5.5.0",
+    "@ethersproject/abstract-signer": "^5.5.0",
+    "@ethersproject/bignumber": "^5.5.0",
+    "@ethersproject/bytes": "^5.5.0",
+    "@ethersproject/constants": "^5.5.0",
+    "@ethersproject/keccak256": "^5.5.0",
+    "@ethersproject/providers": "^5.5.0",
+    "@ethersproject/signing-key": "^5.5.0",
+    "@ethersproject/solidity": "^5.5.0",
+    "@ethersproject/strings": "^5.5.0",
+    "@ethersproject/wallet": "^5.5.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^7.1.1",
-    "@typechain/hardhat": "^2.3.0",
+    "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.2.22",
     "@types/fs-extra": "^9.0.13",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^16.9.6",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
+    "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
     "chai": "^4.3.4",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^10.0.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.4.7",
+    "ethers": "^5.5.1",
     "evm-fp": "^1.2.0",
     "from-exponential": "^1.1.1",
     "fs-extra": "^10.0.0",
-    "hardhat": "^2.6.4",
-    "husky": "^7.0.2",
-    "lint-staged": "^11.1.2",
+    "hardhat": "^2.6.7",
+    "husky": "^7.0.4",
+    "lint-staged": "^11.2.6",
     "lodash": "^4.17.21",
-    "mocha": "^9.1.1",
+    "mocha": "^9.1.3",
     "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.18",
     "shelljs": "^0.8.4",
@@ -51,25 +51,28 @@
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.17",
     "ts-generator": "^0.1.1",
-    "ts-node": "^10.2.1",
-    "typechain": "^5.1.2",
-    "typescript": "~4.4.3"
+    "ts-node": "^10.4.0",
+    "typechain": "^5.2.0",
+    "typescript": "^4.4.4"
   },
   "peerDependencies": {
-    "prb-math": "^2.3.0"
+    "prb-math": "^2.4.1"
   },
   "private": true,
+  "resolutions": {
+    "@ethersproject/wallet": "^5.5.0"
+  },
   "scripts": {
     "clean": "hardhat clean",
     "compile": "hardhat compile",
     "coverage": "hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/**/*.ts\"",
+    "generate:types": "TS_NODE_TRANSPILE_ONLY=1 hardhat typechain",
     "lint": "yarn lint:sol && yarn lint:ts && yarn prettier:check",
     "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
     "lint:ts": "eslint --config ./.eslintrc.yaml --ignore-path ./.eslintignore --ext .js,.ts .",
     "postinstall": "husky install",
-    "prettier": "prettier --config ./.prettierrc --write \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
-    "prettier:check": "prettier --check --config ./.prettierrc \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
-    "test": "hardhat test",
-    "typechain": "TS_NODE_TRANSPILE_ONLY=1 hardhat typechain"
+    "prettier": "prettier --config ./.prettierrc.yaml --write \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
+    "prettier:check": "prettier --check --config ./.prettierrc.yaml \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
+    "test": "hardhat test"
   }
 }
