--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "paulrberg-contracts",
-  "version": "3.6.1",
+  "version": "3.7.0",
   "dependencies": {
     "prb-math": "^2.4.1"
   },
@@ -56,7 +56,7 @@
     "typescript": "^4.4.4"
   },
   "peerDependencies": {
-    "prb-math": "^2.4.1"
+    "prb-math": "2.x"
   },
   "private": true,
   "resolutions": {
