--- a/package.json
+++ b/package.json
@@ -74,5 +74,6 @@
     "prettier": "prettier --config ./.prettierrc.yaml --write \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
     "prettier:check": "prettier --check --config ./.prettierrc.yaml \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
     "test": "hardhat test"
-  }
+  },
+  "packageManager": "yarn@3.1.0"
 }
