--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "typechain": "^7.0.1",
     "typescript": "^4.6.2"
   },
+  "packageManager": "yarn@3.2.0",
   "peerDependencies": {
     "prb-math": "2.x"
   },
@@ -74,6 +75,5 @@
     "prettier": "prettier --config ./.prettierrc.yaml --write \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
     "prettier:check": "prettier --check --config ./.prettierrc.yaml \"**/*.{js,json,md,sol,ts,yaml,yml}\"",
     "test": "hardhat test"
-  },
-  "packageManager": "yarn@3.1.0"
+  }
 }
