--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "eslint-config-prettier": "^8.5.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
-    "evm-fp": "^1.2.0",
+    "evm-bn": "^1.1.1",
     "from-exponential": "^1.1.1",
     "fs-extra": "^10.0.1",
     "hardhat": "^2.9.1",
