--- a/contracts/package.json
+++ b/contracts/package.json
@@ -10,7 +10,7 @@
     "url": "https://github.com/paulrberg/contracts/issues"
   },
   "dependencies": {
-    "prb-math": "^2.4.1"
+    "@prb/math": "^2.5.0"
   },
   "files": [
     "**/*.sol",
@@ -27,7 +27,7 @@
   ],
   "license": "Unlicense",
   "peerDependencies": {
-    "prb-math": "2.x"
+    "@prb/math": "2.x"
   },
   "publishConfig": {
     "access": "public"
