--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "paulrberg-contracts",
+  "description": "Off-the-shelf Solidity smart contracts",
   "version": "3.8.1",
+  "author": {
+    "name": "Paul Razvan Berg",
+    "url": "https://github.com/paulrberg"
+  },
   "dependencies": {
     "@prb/math": "^2.5.0"
   },
