--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@prb/contracts",
   "description": "Off-the-shelf Solidity smart contracts",
-  "version": "3.8.1",
+  "version": "3.9.0",
   "author": {
     "name": "Paul Razvan Berg",
-    "url": "https://paulrberg.com"
+    "url": "https://github.com/paulrberg"
   },
   "bugs": {
     "url": "https://github.com/paulrberg/prb-contracts/issues"
