--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: "Continuous Integration"
+name: "CI"
 
 on:
   pull_request:
@@ -9,7 +9,7 @@ on:
       - "main"
 
 jobs:
-  integration:
+  ci:
     runs-on: "ubuntu-latest"
     steps:
       - name: "Check out the repo"
