--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
     "lint": "yarn solhint && yarn prettier:check",
     "lint:check": "yarn prettier:check && yarn solhint:check",
     "postinstall": "husky install",
-    "prettier": "prettier --config \"./.prettierrc.yml\" --write \"**/*.{json,md,sol,yml}\"",
-    "prettier:check": "prettier --config \"./.prettierrc.yml\" --check \"**/*.{json,md,sol,yml}\"",
-    "solhint": "solhint --config ./.solhint.json \"{src,test}/**/*.sol\""
+    "prettier": "prettier --write \"**/*.{json,md,sol,yml}\"",
+    "prettier:check": "prettier --check \"**/*.{json,md,sol,yml}\"",
+    "solhint": "solhint \"{src,test}/**/*.sol\""
   }
 }
