--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "smart-contracts",
     "solidity"
   ],
-  "license": "Unlicense",
+  "license": "MIT",
   "packageManager": "yarn@3.2.0",
   "peerDependencies": {
     "@prb/math": "2.x"
