--- a/.gitmodules
+++ b/.gitmodules
@@ -3,9 +3,10 @@
 	path = "lib/forge-std"
 	url = "https://github.com/foundry-rs/forge-std"
 [submodule "lib/prb-math"]
+  branch = "v3"
 	path = "lib/prb-math"
 	url = "https://github.com/paulrberg/prb-math"
 [submodule "lib/prb-test"]
-  branch = "0.1.2"
+  branch = "0.3.1"
 	path = "lib/prb-test"
 	url = "https://github.com/paulrberg/prb-test"
