test: use "bound" instead of "vm.assume"
build: add "rimraf" as node.js dep
build: disable metadata hash
build: set "branch" to "v1" for "forge-std"
build: upgrade to more recent "forge-std" release
chore: add "clean "script in "package.json"
chore: add more code comments
chore: improve wording in code comments
style: format Foundry config with Taplo
test: add test for sender balance in "transfer" tests
test: add underscore in test contract names
test: rename "BaseTest" to "Base_Test"
test: use named args

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-dev.21",
+    "rimraf": "^4.1.2",
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5"
   },
@@ -51,6 +52,7 @@
     "url": "https://github.com/paulrberg/prb-contracts"
   },
   "scripts": {
+    "clean": "rimraf broadcast cache out",
     "lint": "yarn solhint && yarn prettier:check",
     "lint:check": "yarn prettier:check && yarn solhint:check",
     "postinstall": "husky install",
