--- a/foundry.toml
+++ b/foundry.toml
@@ -1,16 +1,21 @@
 # Full reference https://github.com/foundry-rs/foundry/tree/master/config
 
 [profile.default]
-auto_detect_solc = false
-fuzz = { runs = 1_000 }
-gas_reports = ["*"]
-libs = ["lib"]
-optimizer = true
-optimizer_runs = 10_000
-out = "out"
-solc = "0.8.17"
-src = "src"
-test = "test"
+  auto_detect_solc = false
+  bytecode_hash = "none"
+  cbor_metadata = false
+  gas_reports = ["*"]
+  libs = ["lib"]
+  optimizer = true
+  optimizer_runs = 10_000
+  out = "out"
+  solc = "0.8.17"
+  src = "src"
+  test = "test"
+
+[profile.default.fuzz]
+  max_test_rejects = 100_000
+  runs = 1_000
 
 [profile.ci]
-fuzz = { runs = 10_000 }
+  fuzz = { runs = 10_000 }
