--- a/.gitmodules
+++ b/.gitmodules
@@ -5,8 +5,8 @@
 [submodule "lib/prb-math"]
   branch = "v3"
 	path = "lib/prb-math"
-	url = "https://github.com/paulrberg/prb-math"
+	url = "https://github.com/PaulRBerg/prb-math"
 [submodule "lib/prb-test"]
   branch = "0.3.1"
 	path = "lib/prb-test"
-	url = "https://github.com/paulrberg/prb-test"
+	url = "https://github.com/PaulRBerg/prb-test"
