--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@prb/contracts",
   "description": "Off-the-shelf Solidity smart contracts",
-  "version": "4.1.1",
+  "version": "5.0.0",
   "author": {
     "name": "Paul Razvan Berg",
-    "url": "https://github.com/paulrberg"
+    "url": "https://github.com/PaulRBerg"
   },
   "bugs": {
-    "url": "https://github.com/paulrberg/prb-contracts/issues"
+    "url": "https://github.com/PaulRBerg/prb-contracts/issues"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
@@ -23,10 +23,10 @@
     "solhint-plugin-prettier": "^0.0.5"
   },
   "files": [
-    "**/*.sol",
+    "/src",
     "CHANGELOG.md"
   ],
-  "homepage": "https://github.com/paulrberg/prb-contracts#readme",
+  "homepage": "https://github.com/PaulRBerg/prb-contracts#readme",
   "keywords": [
     "blockchain",
     "erc20",
@@ -40,10 +40,9 @@
   "publishConfig": {
     "access": "public"
   },
-  "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/paulrberg/prb-contracts"
+    "url": "https://github.com/PaulRBerg/prb-contracts"
   },
   "scripts": {
     "build": "forge build",
