--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.3",
     "lint-staged": "^12.5.0",
+    "pinst": "^3.0.0",
     "prettier": "^2.8.3",
     "prettier-plugin-solidity": "^1.1.1",
     "rimraf": "^4.1.2",
@@ -49,6 +50,8 @@
     "clean": "rimraf broadcast cache out",
     "lint": "yarn prettier:check && yarn solhint \"{src,test}/**/*.sol\"",
     "postinstall": "husky install",
+    "postpublish": "pinst --enable",
+    "prepublishOnly": "pinst --disable",
     "prettier:check": "prettier --check \"**/*.{json,md,sol,yml}\"",
     "prettier:write": "prettier --write \"**/*.{json,md,sol,yml}\""
   }
