--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,13 +6,13 @@ on:
       - "v[0-9]+.[0-9]+.[0-9]+"
 
 jobs:
-  build:
+  release:
     runs-on: "ubuntu-latest"
     steps:
       - name: "Check out the repo"
         uses: "actions/checkout@v3"
 
       - name: "Release"
-        uses: "docker://antonyurchenko/git-release:latest"
+        uses: "docker://antonyurchenko/git-release:v5"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
