style: format contracts with Forge formatter
build: remove "prettier-plugin-solidity" dep
build: remove "solhint-plugin-prettier" dep
chore: delete stale rules in Solhint config
chore: switch to use Forge formatter instead of Prettier
ci: install Foundry in "lint" job
docs: add more keywords in "package.json"
docs: delete Prettier badge

--- a/foundry.toml
+++ b/foundry.toml
@@ -19,3 +19,13 @@
 
 [profile.ci]
   fuzz = { runs = 10_000 }
+
+[fmt]
+  bracket_spacing = true
+  int_types = "long"
+  line_length = 120
+  multiline_func_header = "all"
+  number_underscore = "thousands"
+  quote_style = "double"
+  tab_width = 4
+  wrap_comments = true
