--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
   },
   "devDependencies": {
     "prettier": "^2.8.3",
-    "prettier-plugin-solidity": "^1.1.1",
     "rimraf": "^4.1.2",
-    "solhint": "^3.3.8",
-    "solhint-plugin-prettier": "^0.0.5"
+    "solhint": "^3.3.8"
   },
   "files": [
     "/src",
@@ -23,7 +21,9 @@
   "homepage": "https://github.com/PaulRBerg/prb-contracts#readme",
   "keywords": [
     "blockchain",
+    "decentralized-finance",
     "erc20",
+    "erc20-permit",
     "ethereum",
     "library",
     "smart-contracts",
@@ -43,7 +43,7 @@
     "clean": "rimraf broadcast cache out",
     "lint": "yarn lint:sol && yarn prettier:check",
     "lint:sol": "solhint \"{src,test}/**/*.sol\"",
-    "prettier:check": "prettier --check \"**/*.{json,md,sol,yml}\"",
-    "prettier:write": "prettier --write \"**/*.{json,md,sol,yml}\""
+    "prettier:check": "prettier --check \"**/*.{json,md,yml}\"",
+    "prettier:write": "prettier --write \"**/*.{json,md,yml}\""
   }
 }
