--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
 # directories
-.yarn/*
-!.yarn/patches
-!.yarn/releases
-!.yarn/plugins
-!.yarn/sdks
-!.yarn/versions
 **/cache
 **/node_modules
 **/out
@@ -14,8 +8,5 @@
 *.log
 .DS_Store
 .pnp.*
-npm-debug.log*
-src/CHANGELOG.md
-src/README.md
-yarn-debug.log*
-yarn-error.log*
+lcov.info
+yarn.lock
