--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "solidity"
   ],
   "license": "MIT",
-  "packageManager": "yarn@3.4.1",
   "publishConfig": {
     "access": "public"
   },
@@ -41,8 +40,8 @@
   "scripts": {
     "build": "forge build",
     "clean": "rimraf broadcast cache out",
-    "lint": "yarn lint:sol && yarn prettier:check",
-    "lint:sol": "forge fmt --check && yarn solhint \"{script,src,test}/**/*.sol\"",
+    "lint": "pnpm lint:sol && pnpm prettier:check",
+    "lint:sol": "forge fmt --check && pnpm solhint \"{script,src,test}/**/*.sol\"",
     "prettier:check": "prettier --check \"**/*.{json,md,yml}\"",
     "prettier:write": "prettier --write \"**/*.{json,md,yml}\""
   }
