ci: add deployment workflow for ERC-20 token
build: set up Etherscan API and Infura PRC in Foundry config
chore: add mnemonic in ".env.example"

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-export ETH_FROM="YOUR_DEFAULT_SENDER_ACCOUNT"
-export ETH_RPC_URL="https://rinkeby.infura.io/v3/INFURA_API_KEY"
+API_KEY_ETHERSCAN="YOUR_API_KEY_ETHERSCAN"
+API_KEY_INFURA="YOUR_API_KEY_INFURA"
+MNEMONIC="YOUR_MNEMONIC"
