--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "devDependencies": {
     "prettier": "^2.8.3",
-    "rimraf": "^4.1.2",
     "solhint": "^3.3.8"
   },
   "files": [
@@ -39,7 +38,7 @@
   },
   "scripts": {
     "build": "forge build",
-    "clean": "rimraf broadcast cache out",
+    "clean": "rm -rf broadcast cache out",
     "lint": "pnpm lint:sol && pnpm prettier:check",
     "lint:sol": "forge fmt --check && pnpm solhint \"{script,src,test}/**/*.sol\"",
     "prettier:check": "prettier --check \"**/*.{json,md,yml}\"",
