--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-API_KEY_ETHERSCAN="YOUR_API_KEY_ETHERSCAN"
-API_KEY_INFURA="YOUR_API_KEY_INFURA"
-MNEMONIC="YOUR_MNEMONIC"
+export API_KEY_ETHERSCAN="YOUR_API_KEY_ETHERSCAN"
+export API_KEY_INFURA="YOUR_API_KEY_INFURA"
+export MNEMONIC="YOUR_MNEMONIC"
