--- a/foundry.toml
+++ b/foundry.toml
@@ -4,6 +4,7 @@
   auto_detect_solc = false
   bytecode_hash = "none"
   cbor_metadata = false
+  evm_version = "paris"
   gas_reports = ["*"]
   libs = ["lib"]
   optimizer = true
