--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -14,7 +14,7 @@ jobs:
         uses: "actions/checkout@v3"
         with:
           fetch-depth: 0
-          ref: "v5"
+          ref: "release-v5"
 
       - name: "Configure Git"
         run: |
@@ -24,6 +24,6 @@ jobs:
       - name: "Sync Release Branch"
         run: |
           git fetch --tags
-          git checkout v5
+          git checkout release-v5
           git reset --hard ${GITHUB_REF}
           git push --force
